--- a/src/components/Basket/BasketItemList/BasketItemList.module.scss
+++ b/src/components/Basket/BasketItemList/BasketItemList.module.scss
@@ -20,7 +20,6 @@
   .basketItemsWrapper {
     display: flex;
     flex-direction: column;
-    gap: 40px;
   }
 
   .emptyBasket {
@@ -31,8 +30,8 @@
   }
 
   .basketCrossBtn {
-    height: 22px;
-    width: 23px;
+    height: 24px;
+    width: 25px;
     top: -10px;
     right: -10px;
     position: relative;
