--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -33,8 +33,8 @@
   }
 
   .headerBurger {
-    width: 29px;
-    height: 22px;
+    width: 31px;
+    height: 24px;
     display: none;
     margin-left: 26px;
     @media (max-width: variables.$mobile) {
@@ -58,10 +58,10 @@
     position: relative;
 
     .headerBasket {
-      height: 21px;
-      width: 24px;
+      height: 22px;
+      width: 25px;
       margin-top: 4px;
-      @include mixins.backgrfix('../../assets/svg/shopping_basket.svg');
+      @include mixins.backgr('../../assets/svg/shopping_basket.svg');
     }
 
     .headerBasketCount {
