--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,9 +1,5 @@
 @mixin backgr($url) {
-  background: url($url) center / 100% no-repeat;
-}
-
-@mixin backgrfix($url) {
-  background: url($url) center / 95% no-repeat;
+  background: url($url) center no-repeat;
 }
 
 @mixin button() {
